--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,15 @@
 spring:
   application:
     name: paingan-eureka
+  rabbitmq:
+    host: localhost
+    port: 5672
+  zipkin:
+    base-url: http://localhost:9411
+    enabled: true
+    locator:
+      discovery:
+        enabled: true
 
 server:
   port: ${server.port}
